# game

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
.cache/clangd/index/: foo.cpp.6DFAD59AD96C5CD7.idx  foo.hpp.4BAAD971E3886628.idx  main.cpp.B2907649F0A9B501.idx  subsystem.cpp.0C42E008DD3A3345.idx  subsystem.hpp.4E1FAE70529E0DA2.idx
_-_old_backends/: Metal.mm
_-_old_backends/OpenGL/: Commands.cpp  Pipelines.cpp  Submissions.cpp
_-_old_renderer/: Commands.hpp
_-_old_renderer/Renderer/: Commands.cpp
assets/shaders/: basic.frag  basic.hlsl  basic.pixel.spv  basic.vert  basic.vertex.spv
assets/shaders/basic/: basic.vertex.dxbc  basic.vertex.glsl  basic.vertex.metal  basic.vertex.spv
assets/shaders/basic/dxbc/: basic.pixel.dxbc  basic.vertex.dxbc
assets/shaders/basic/glsl/: basic.pixel.glsl  basic.vertex.glsl
assets/shaders/basic/msl/: basic.pixel.air  basic.pixel.metal  basic.vertex.air  basic.vertex.metal  shaders.metallib
assets/shaders/basic/spv/: basic.pixel.spv  basic.vertex.spv
assets/shaders/metal/: basic.air  basic.metal  basic.metallib
assets/shaders/spv/: basic.hlsl  basic.pixel.spv  basic.vertex.spv
engine/: CMakeLists.txt
engine/src/: subsystem.cpp
engine/src/include/engine/: console.hpp  matrix.hpp  subsystem.hpp  traits.hpp  vector.hpp  window.hpp
game/: CMakeLists.txt
game/source/: main.cpp
game/src/: main.cpp
include/Debug/: Codes.hpp  Exception.hpp  Logging.hpp
include/Game/: BasicMesh.hpp  Camera.hpp  Instance.hpp  Player.hpp  Transform.hpp
include/Program/: Application.hpp
include/Renderer/Systems/: Instance.hpp
include/Resources/: Attachments.hpp  Buffer.hpp  Buffers.hpp  Entity.hpp  PhysicalDevice.hpp  Pipeline.hpp  Pipelines.hpp  Queue.hpp  RenderPass.hpp  RenderQueue.hpp  Submission.hpp  Submissions.hpp
include/Systems/: Context.hpp  Registry.hpp  Renderer.hpp  Window.hpp
include/Systems/Renderer/: Backends.hpp  Commands.hpp  DirectX12.hpp  Metal.hpp  OpenGL.hpp  Vulkan.hpp
include/Types/: BitsetTree.hpp  SparseSet.hpp
include/Window/Systems/: Window.hpp
scripts/: compile_shader.sh  compile_shaders.py
source/Debug/: Exception.cpp
source/Game/: BasicMesh.cpp  Camera.cpp  Instance.cpp
source/Program/: Application.cpp  Main.cpp
source/Systems/: Context.cpp  Renderer.cpp  Window.cpp
source/Systems/Renderer/: Buffers.cpp  Commands.cpp  Metal.cpp  Metal.mm  OpenGL.cpp  Pipelines.cpp  Queue.cpp  RenderPass.cpp  RenderQueue.cpp  Submissions.cpp  Vulkan.cpp
source/Systems/Renderer/DirectX12/: DirectX12.cpp
source/Systems/Renderer/Metal/: Metal.cpp  Metal.mm
source/Systems/Renderer/OpenGL/: Buffers.cpp  Commands.cpp  Initialisation.cpp  Pipelines.cpp  Queue.cpp  RenderPass.cpp  Submissions.cpp  Swapchain.cpp  Utilities.cpp
source/Systems/Renderer/Vulkan/: Buffers.cpp  Initialisation.cpp  Pipelines.cpp  Queue.cpp  RenderPass.cpp  Submissions.cpp  Swapchain.cpp  Vulkan.cpp
spark-engine/: CMakeLists.txt
spark-engine/source/include/spark/ecs/: bitset.hpp  entity.hpp  registry.hpp
spark-engine/source/include/spark/events/: dispatcher.hpp  family.hpp  queue.hpp  signal.hpp  sink.hpp
spark-engine/source/include/spark/types/: core.hpp  filler.hpp  index.hpp  list.hpp  span.hpp  sparse_set.hpp  traits.hpp
spark-engine/source/include/spark/utilities/: sorting.hpp  values.hpp
